# django-mcp-discovery

./: README.md  pyproject.toml
django_mcp_discovery.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mcp_discovery/: __init__.py  apps.py  manifest.py  urls.py  views.py
